# serde_bare

./: Cargo.toml  README  README.md
.builds/: nightly.yml  stable.yml
benches/: Cargo.toml  README.md
src/: de.rs  error.rs  lib.rs  ser.rs
