[package]
name = "serde_bare"
version = "0.4.0"
authors = ["Tadeo Kondrak <me@tadeo.ca>"]
license = "MIT OR Apache-2.0"
edition = "2018"
description = "An implementation of the BARE (https://baremessages.org) encoding format."
repository = "https://git.sr.ht/~tdeo/serde_bare"
keywords = ["serde", "bare"]
categories = ["encoding"]
exclude = ["benches/go-reference"]

[dependencies]
serde = "1.0"

[workspace]
members = ["benches"]
