[package]
name = "serde_bare"
version = "0.5.0"
authors = ["Tadeo Kondrak <me@tadeo.ca>"]
license = "MIT OR Apache-2.0"
edition = "2018"
description = "An implementation of the BARE (https://baremessages.org) encoding format."
repository = "https://git.sr.ht/~tdeo/serde_bare"
keywords = ["serde", "bare", "no_std"]
categories = ["encoding"]
exclude = ["benches/go-reference"]

[features]
default = ["std"]
std = ["serde/std"]
alloc = ["serde/alloc"]

[dependencies]
serde = { version = "1", default_features = false }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]

[workspace]
members = ["benches"]
